# Grad-Checklist

./: .gitignore  README.md  dump.sql  dump1.sql  pyproject.toml  run_course_scrapper.py  run_module_extractor.py  run_module_scrapper.py  run_subject_scrapper.py  run_transcript_scrapper.py
gradchecklist/: __init__.py  api.py  config.py  course.py  course_scrapper.py  db.py  dev_server.py  grad_check.py  module.py  module_extractor.py  module_logic.py  module_scrapper.py  prerequisite.py  result.py  student.py  subject.py  subject_scrapper.py  transcript_course.py  transcript_scrapper.py  transcript_student.py  views.py
gradchecklist/sql/: clean.sql  setup.sql  testdata.sql
sql/: clean.sql  dump.sql  schema.sql  setup.sql  testdata.sql
tests/: conftest.py  test_course.py  test_module.py  test_subject.py
www/html/: index.html  upload.html
www/html/include/: footer.html  header.html
www/html/pages/: about.html  manual.html  privacy.html  result.html  upload.html
www/script/: global.js
www/style/: global.css
