[project]
name = "gradchecklist"
description = "Module checker Flask application."
dynamic = ["version"]
dependencies = [
    "flask",
    "PyMySQL"
]

[project.optional-dependencies]
production = [
    "mysqlclient"
]

[build-system]
requires = ["flit_core >=3.2"]
build-backend = "flit_core.buildapi"
